# mcp-switch

./: .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  config.rs  main.rs  output.rs  profile.rs
