[package]
name = "mcp-switch"
version = "1.0.1"
edition = "2021"
description = "Enable/disable MCP servers for Claude Code"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
owo-colors = "4"
dirs = "6"
