[package]
name = "mcp-switch"
version = "1.0.2"
edition = "2021"
description = "Enable/disable MCP servers for Claude Code"
license = "MIT"
repository = "https://github.com/incu6us/mcp-switch"
homepage = "https://github.com/incu6us/mcp-switch"
keywords = ["mcp", "claude", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
owo-colors = "4"
dirs = "6"
